--- a/GTScrollNavigationBarExample/Podfile
+++ b/GTScrollNavigationBarExample/Podfile
@@ -18,3 +18,5 @@ target :GTScrollNavigationBarTests, :exclusive => true do
   pod 'Specta', '~> 1.0.3'
   pod 'Expecta', '~> 1.0.2'
 end
+
+pod 'MJRefresh'
